generated/manifests/prod-axon/sonarr/Service-sonarr.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: sonarr
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/service: sonarr
  name: sonarr
  namespace: media
spec:
  ports:
    - name: http
      port: 8989
      protocol: TCP
      targetPort: 8989
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: sonarr
    app.kubernetes.io/name: sonarr
  type: ClusterIP
