generated/manifests/prod-axon/sonarr/HTTPRoute-sonarr.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: media
spec:
  hostnames:
    - sonarr.json64.dev
  parentRefs:
    - name: default-gateway
      namespace: gateways
      sectionName: json64-dev-https
  rules:
    - backendRefs:
        - name: sonarr
          port: 8989
      timeouts:
        request: 600s
