generated/manifests/prod-axon/sonarr/SecurityPolicy-sonarr-oidc.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: sonarr-oidc
  namespace: media
spec:
  oidc:
    clientID: sonarr
    clientSecret:
      name: sonarr-oidc-client-secret
    forwardAccessToken: true
    provider:
      authorizationEndpoint: https://idm.json64.dev/ui/oauth2
      issuer: https://idm.json64.dev/oauth2/openid/sonarr
      tokenEndpoint: https://idm.json64.dev/oauth2/token
    scopes:
      - email
      - openid
      - profile
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: sonarr
