generated/manifests/prod-axon/sonarr/CiliumNetworkPolicy-allow-internet-egress-sonarr.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-internet-egress-sonarr
  namespace: media
spec:
  description: Allow sonarr to reach the public internet.
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: sonarr
