generated/manifests/prod-axon/sonarr/CiliumNetworkPolicy-allow-metrics-ingress-sonarr.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-metrics-ingress-sonarr
  namespace: media
spec:
  description: Allow Prometheus to scrape sonarr's exportarr sidecar (9707).
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: sonarr
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
            k8s:io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "9707"
              protocol: TCP
